--- a/ur3_moveit_config/config/controllers.yaml
+++ b/ur3_moveit_config/config/controllers.yaml
@@ -9,3 +9,9 @@ controller_list:
       - wrist_1_joint
       - wrist_2_joint
       - wrist_3_joint
+  - name: "gripper"
+    action_ns: gripper_cmd
+    type: GripperCommand
+    default: true
+    joints:
+      - finger_joint
