--- a/ur3_moveit_config/config/joint_limits.yaml
+++ b/ur3_moveit_config/config/joint_limits.yaml
@@ -32,3 +32,8 @@ joint_limits:
     max_velocity: 3.2
     has_acceleration_limits: true
     max_acceleration: 3.2
+  finger_joint:
+    has_velocity_limits: true
+    max_velocity: 2
+    has_acceleration_limits: true
+    max_acceleration: 0
